{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "77f5d4d9-e0d1-4f37-a96c-35954668e0a3",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "c0cb73a0-714c-4bcb-a0cd-2b5999e26326",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "76aced7b-b786-4d0b-aebb-b7141251edb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "c115a401-e31a-49e0-9594-62e367d770b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "7701c58e-0db9-4347-81af-f79487667eb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5589e008-f325-4e5a-a13c-5aa89d0cd501",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6ac0011d-dd60-453d-b7ba-a3ff58aef779",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ef1498aa-2ba3-4e4a-8ed1-3cc45a623693",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5ef5e69e-71bf-4b10-8700-53eb867c46ed",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0a6f2c21-1ac0-4e8d-8d72-79f85dad7e0a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "39a4800f-f5fa-4e4e-bc02-17aef7ba6133",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b63e3a1-4cd5-4f61-af84-fc07aae15c1e",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16b1c394-e541-4f45-ae24-9fa8934ffcbf",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "aabbcee2-68ba-4562-8040-454f66159bf1",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "a43d8bda-216d-4313-9098-80a868d05828",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "866930cd-83bb-4558-9dfb-3ef89b7289bf",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerAction",
            "id": "82977629-9940-4234-982c-79e95ffbec8d",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "38aafe6e-3236-43a9-84de-a59d3c7a1cfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpArrow",
                    "type": "Button",
                    "id": "682499c1-b6bc-492e-9f1e-dabdd5295c11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownArrow",
                    "type": "Button",
                    "id": "f960930c-0f3f-4199-929c-38d184d03173",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left Arrow",
                    "type": "Button",
                    "id": "f8150e3f-5508-4f03-afa7-c5dd9065f326",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right Arrow",
                    "type": "Button",
                    "id": "08743508-8bc6-48b4-99a6-85f700d807db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "dcbdc424-eed8-4082-81b2-76e71b721987",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f9e32bee-6f05-4a70-8bcb-648af57ca3fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "acde32ce-cdd1-4d63-bd48-84534545eaa1",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1775405f-c545-4f7f-aced-27cfd7942a02",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83b0643e-c855-4b12-84eb-8825bc7d8285",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21d19740-e2b6-47fa-8722-66ed7fd6cdfd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Arrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82ab885b-f4a2-4858-82c9-2fdd8056f020",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right Arrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3450f834-0532-4ad6-9721-432d5e144e41",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bff30e50-812e-41f8-9d19-0e657619f671",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeybroadAndMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeybroadAndMouse",
            "bindingGroup": "KeybroadAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}